--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://gitlab.sazze.com/nodejs/sz-riak.git"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "lodash": "^2.4.1",
     "request": "^2.44.0"
   },
